[tool.poetry]
name = "twire-q-server"
version = "0.1.0"
description = ""
authors = ["godan <shogo070920@gmail.com>"]
license = "NYSL"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.7"
httpx = "^0.19.0"
Authlib = "^0.15.4"
black = "^21.9b0"
searchtweets = "^1.7.6"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"
flake8 = "^3.9.2"
bandit = "^1.7.0"
black = {version = "^21.9b0", allow-prereleases = true}
mypy = "^0.910"
pathspec = {version = "^0.9.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
